@@ -10,6 +10,8 @@ News
 SQLObject 0.9.7
 ===============
 
+* Use VARCHAR(MAX) and VARBINARY(MAX) for MSSQL >= 9.0.
+
 * Fixed a minor bug in Set column.
 
 * A bug fixed for RowCreatedSignal together with InheritableSQLObject:
